Fixed the sticky hover problem on mobile. There is probably a better solution out there, but this is simple and it works.

--- a/Gatsby/nickhtpappas.com/src/layouts/index.css
+++ b/Gatsby/nickhtpappas.com/src/layouts/index.css
@@ -932,9 +932,18 @@ a {
   -o-transition: color 0.3s ease-in-out;
   transition: color 0.3s ease-in-out;
 }
-a:hover {
+
+a:active {
+  color: #1e90ff;
+}
+
+body.hasHover a:hover {
   color: #313131;
 }
+
+/* a:hover {
+  color: #313131;
+} */
 
 .social-links {
   margin: 18px 0 30px 0;
@@ -1313,10 +1322,15 @@ input[type='button'].full-width {
   background: #444;
 }
 
-.button:hover {
+body.hasHover .button:hover {
   background: #fff;
   color: #2b2b2b;
 }
+
+/* .button:hover {
+  background: #fff;
+  color: #2b2b2b;
+} */
 
 /* Fix for odd Mozilla border & padding issues */
 button::-moz-focus-inner,
